新增内容：pg库sql和mvn编译打包问题